add some command shortcut

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test:factory": "npx hardhat test test/AuctionFactory.test.js",
     "test:auction": "npx hardhat test test/Auction.test.js",
     "test:nft": "npx hardhat test test/NFT.test.js",
-    "deploy:sepolia": "npx hardhat run scripts/deploy_to_sepolia.js",
+    "deploy": "npx hardhat run scripts/deploy.js --network sepolia",
     "upgrade": "npx hardhat run scripts/upgrade_auction.js"
   },
   "devDependencies": {
